# ActuaryProgrammer

./: .editorconfig  .envexample  .gcloudignore  .gitignore  .pre-commit-config.yaml  1436_Destination_City_with_flowup.ipynb  36_Valid_Sudoku.ipynb  3_Longest_Substring_Without_Repeating_Characters.ipynb  42_Trapping_Rain_Water.ipynb  460_LFU_Cache.ipynb  912_Sort_an_Array_Quick_Sort.ipynb  C#Instructions.html  CLOUD_FUNCTION_README.md  DEPLOYMENT.md  Decision Tree.py  DecisionTree.py  Dockerfile  Fibonacci_Number_and_Dynamic_Programming.ipynb  Makefile  NeuralNetwork.py  POETRY_README.md  Portfolio_Optimization.ipynb  README.md  REDEPLOYMENT.md  Untitled34.ipynb  VWMP.ipynb  VWMP_ScratchWork_forTesting.ipynb  app.yaml  auto_pay_AutoSklearn.ipynb  bubble_sort.ipynb  cloudbuild.yaml  cut_release.py  docker-compose-non-api-services.yml  docker-compose.yml  gcloud_deploy.bash  index.html  main.py  manage.py  naive_chatbot.ipynb  peerlogic-api-prod.yaml  (+4 more)
.github/: dependabot.yml
.github/workflows/: deploy-function.yml
Tests/test_api/: tests.py
authz/: permissions.py  tokens.py
calls/: admin.py  apps.py  field_choices.py  filters.py  inline_serializers.py  models.py  publishers.py  serializers.py  twilio.py  twilio_etl.py  urls.py  validation.py  views.py
calls/analytics/: aggregates.py  constants.py  helpers.py  query_filters.py  views.py
calls/migrations/: 0001_initial.py  0002_CallerName.py  0002_TelecomCallerNameInfoAdditions.py  0002_telecom_caller_name_info.py  0002_telecom_caller_name_info_adds_carrier_info.py  0003_contact_and_telecom_caller_name_info_indices.py  0003_initalize_calls.py  0003_initialize_calls.py  0003_telecom_caller_name_info_source_field.py  0004_callaudiopartial.py  0004_caller_name_type_is_nullable.py  0004_follow_django_standards_with_telecom.py  0005_alter_telecomcallernameinfo_caller_name.py  0005_change_Contact_to_Patient.py  0005_delete_callaudiopartial.py  0006_create_call_partials_and_transcripts.py  0006_transcriptpartial.py  0007_add_mimetypes.py  0007_call_transcript.py  0008_call_transcript.py  0009_call_partial_interaction_times.py  0009_calls_associated_with_mandatory_practice_step_1_add_column.py  0010_calls_associated_with_mandatory_practice_step_2_populate_colum.py  0011_calls_associated_with_mandatory_practice_step_3_murder_the_old_column.py  0012_call_partial_interaction_times.py  0013_calltranscript_publish_event_on_patch.py  0014_callaudio.py  0015_callaudio_call.py  0016_call_partial_unique_time_constraints.py  0017_remove_call_metadata_file_uri.py  0018_auto_20220330_2308.py  0018_auto_20220331_1722.py  0019_auto_20220331_1951.py  0020_call_transcript_fragment.py  0020_callprocedurediscussed.py  0021_calllongestpause.py  0021_callsentiment.py  0022_calllongestpause.py  0023_callprocedurediscussed.py  0024_procedure_updates_and_keyword_lookup.py  (+49 more)
care/: apps.py  models.py  serializers.py  urls.py  views.py
care/migrations/: 0001_initial.py  0002_procedure_updates_and_keyword_lookup.py  0003_procedure_description.py  0004_auto_20230120_2024.py
cloud_functions/: nexhealth_initialize_practice.py
cloud_functions/foo/: entrypoint.py
core/: abstract_models.py  admin.py  authentication.py  aws_iam_helpers.py  aws_s3_helpers.py  cloud_storage_helpers.py  exceptions.py  field_choices.py  file_upload.py  forms.py  inline_serializers.py  managers.py  models.py  pagination.py  pubsub_helpers.py  serializers.py  settings.py  setup_user_and_practice.py  tests.py  urls.py  validation.py  view_mixins.py  views.py
core/clients/: api_client.py  netsapiens_client.py
core/cloud_functions/: bar.py
core/migrations/: 0001_initial.py  0002_auto_20201209_0059.py  0002_initial.py  0002_remove_patient_velox_extract_data.py  0003_auto_20201210_2333.py  0003_voipprovider.py  0004_auto_20201211_0432.py  0004_netsapiens_and_voipmonitor_active.py  0004_practicetelecom_voip_provider.py  0005_alter_user_id.py  0005_auto_20210830_2158.py  0005_voip_provider_active.py  0006_contact.py  0006_practice_have_active_flag.py  0007_alter_practicetelecom_practice.py  0007_remove_unnecessary_token_fields.py  (+32 more)
deployment/: DEPLOYMENT.md  cloud_sql_proxy.bash  gcloud_deploy.bash  psql_deploy.bash
devtools/: Dockerfile  README.md  cloud_sql_proxy.bash  cloudsql-docker-compose.yml  dumpdata.bash  peerlogic-api-sql-seed.sql
docs/: CLOUD_FUNCTION_README.md  POETRY_README.md  SOLVESTACK_README.md
environment-connect/: cloudsql-docker-compose.yml  connect.sh
etl/: models.py  serializers.py  urls.py  views.py
fixtures/: README.md  admin.json  calls_callaudio.json  calls_calltranscript.json  calls_caps.json  calls_ctps.json  care_procedures.json  core.json  django_celery_beat.json  insurance_providers_and_phone_numbers.json  json-july-dev-results.json  json-july-prod-results-with-failure-outcome.json  json-july-prod-results-with-procedures.json  jsonl-july-dev-results.json  ml_mlmodel.json  netsapiens_integration.json  netsapiens_integration_cdr2_extracts.json  netsapiens_integration_event_extracts.json  reminders.json
health/: views.py
inbox/: field_choices.py  models.py  serializers.py  urls.py  views.py
jive_integration/: README.md  admin.py  apps.py  exceptions.py  field_choices.py  models.py  publishers.py  serializers.py  urls.py  utils.py  views.py
ml/: field_choices.py  models.py  serializers.py  urls.py  views.py
netsapiens_integration/: admin.py  apps.py  helpers.py  models.py  publishers.py  serializers.py  urls.py  views.py
nexhealth_integration/: adapters.py  apps.py  ingest.py  models.py  nexhealth_api_client.py  serializers.py  urls.py  utils.py  views.py
notebooks/: colab-github-demo.ipynb
peerlogic/: __init__.py  asgi.py  celery.py  debugging.py  decorators.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
peerlogic_admin/: admin.py
reminders/: admin.py  field_choices.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
requirements/: dev-requirements.txt  requirements.txt
ringcentral_integration/: README.md  admin.py  apps.py  models.py  publishers.py  serializers.py  urls.py  views.py
(+185 files in other folders)
