[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 160
target-version = ["py39"]
# single quotes are required for this config file - do not change to double quotes
extend-exclude = '''
^/.*/migrations/.*.py
'''

[tool.poetry]
name = "peerlogic-api"
version = "0.1.43"
description = "Peerlogic API"
authors = []

# WARNING - DO NOT MANUNALLY EDIT THIS SECTION
# Use poetry.add, poetry.remove, etc.
[tool.poetry.dependencies]
python = "^3.7.9"
argon2-cffi = "16.1.0"
boto3 = "1.24.9"
celery = "5.0.2"
cryptography = ">=35.0.0"
Django = ">=3.0"
django-celery-beat = "2.1.0"
django-cors-headers = ">=3.5.0"
django-countries = "7.2.1"
django-extensions = "3.0.5"
django-filter = "2.3.0"
django-fixture-magic = "0.1.5"
django-oauth-toolkit = "2.0.0"
django-phonenumber-field = {version = "5.2.0", extras = ["phonenumbers"]}
django-userforeignkey = "0.3.0"
djangorestframework = ">=3.11.1"
djangorestframework-simplejwt = "5.2.0"
drf-compound-fields = "2.0.0"
drf-nested-routers = "0.93.4"
future = "0.18.2"
gcloud = "0.18.3"
gunicorn = "20.0.4"
pydantic = "1.9.0"
python-dotenv = "0.15.0"
redis = "3.5.3"
requests = "2.25.1"
shortuuid = "1.0.1"
twilio = "7.3.2"
wheel = "0.35.1"
xmltodict = "0.12.0"
psycopg2-binary = "2.8.6"
google-cloud-secret-manager = "2.8.0"
google-cloud-pubsub = "2.9.0"
google-cloud-storage = "2.1.0"

# WARNING - DO NOT MANUNALLY EDIT THIS SECTION
pandas = "<1.4"
django-pandas = "^0.6.6"
numpy = "<1.23"
"backports.zoneinfo" = "^0.2.1"
django-localflavor = "^3.1"
django-redis = "^5.2.0"
# Use poetry.add ... --dev, poetry.remove ... --dev, etc.
[tool.poetry.dev-dependencies]
black = "22.6.0"
djangorestframework-stubs = "1.4.0"
python-dotenv = "0.15.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
